<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>io.extremum</groupId>
        <artifactId>extremum-bom</artifactId>
        <version>${extremum.version}</version>
        <relativePath>../extremum-bom</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>extremum-app-parent</artifactId>
    <packaging>pom</packaging>
    <name>Parent for applications based on extremum-common</name>
    <description>This module may be used as a parent for an application that wants to inherit
        dependencies from extremum-common. Consider importing extremum-bom to achieve the same without
        using a parent.
        For extremum-common modules, extremum-common parent should be used as a parent.
    </description>

    <url>https://github.com/smekalka/extremum-common-java</url>
    <inceptionYear>2022</inceptionYear>
    <scm>
        <connection>scm:https://github.com/smekalka/extremum-common-java.git</connection>
        <developerConnection>scm:git://github.com/smekalka/extremum-common-java.git</developerConnection>
        <url>https://github.com/smekalka/extremum-common-java</url>
    </scm>
    <licenses>
        <license>
            <name>Business Source License 1.1</name>
            <url>https://github.com/smekalka/extremum-common-java/blob/develop/LICENSE.md</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>urgimchak</id>
            <name>Maksim Tyutyaev</name>
            <email>maksim.tyutyaev@smekalka.com</email>
        </developer>
    </developers>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot-dependencies.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <source>8</source>
                        <target>8</target>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.1</version>
                    <configuration>
                        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
